--- a/skysub.tex
+++ b/skysub.tex
@@ -41,7 +41,7 @@ Here is an abstract.
 
 \section{Introduction}
 
-Here are some opening thoughts.
+Here are some opening thoughts. This is some dummy text.
 
 \section{Observations} % (fold)
 \label{sec:Observations}
